--- a/app/app.html
+++ b/app/app.html
@@ -1,8 +1,25 @@
-<section class="sample-app-content">
-  <nav>
-    <a [router-link]="['/home']">Home</a>
-    <a [router-link]="['/about']">About</a>
-  </nav>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><strong>Angular Seed2 Demo</strong></a>
+    </div>
 
-  <router-outlet></router-outlet>
-</section>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a [router-link]="['/home']">Home<span class="sr-only">(current)</span></a></li>
+        <li><a [router-link]="['/about']">About<span class="sr-only">(current)</span></a></li>
+        <li><a class="active" [router-link]="['/todoApp']">TodoApp<span class="sr-only">(current)</span></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<router-outlet></router-outlet>
