--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,12 @@
+<!-- OGs: https://github.com/mgechev/angular2-seed -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My Angular 2 App</title>
+  
+
   <base href="<%= APP_BASE %>">
   <!-- ignore: Aplha 32 router fix -->
   <script>baseElement = document.querySelector('base');baseElement.attr = baseElement.getAttribute;</script>
@@ -13,13 +16,12 @@
   <!-- endinject -->
 </head>
 <body>
-
   <app>Loading...</app>
 
   <!-- inject:js -->
   <!-- endinject -->
 
   <script src="<%= APP_BASE %>init.js?v=<%= VERSION %>"></script>
-
+  <script src="http://code.jquery.com/jquery.min.js"></script>
 </body>
 </html>
